--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,62 @@
-@import './base.css';
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif; }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  width: 100%;
+  height: 100vh; }
 
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
+nav .coisas-da-loja {
+  background-color: black;
+  width: 100%; }
+  nav .coisas-da-loja ul {
     display: flex;
-    place-items: center;
-  }
+    list-style: none;
+    height: 5vh;
+    align-items: center;
+    justify-content: space-evenly; }
+    nav .coisas-da-loja ul a {
+      color: white;
+      font-weight: 800;
+      text-decoration: none; }
+nav .nav-principal {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 13vh;
+  border-bottom: 2px solid red; }
+  nav .nav-principal .logo {
+    color: red;
+    font-size: 2em; }
+    nav .nav-principal .logo h1 {
+      font-weight: 900; }
+  nav .nav-principal .pesquisa {
+    display: flex; }
+    nav .nav-principal .pesquisa input {
+      width: 420px;
+      border-top-left-radius: 15px;
+      border-bottom-left-radius: 15px;
+      border-color: black; }
+    nav .nav-principal .pesquisa .lupa {
+      background-color: red;
+      width: 45px;
+      height: 45px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-top-right-radius: 15px;
+      border-bottom-right-radius: 15px; }
+  nav .nav-principal .user-carrinho {
+    display: flex; }
+    nav .nav-principal .user-carrinho .user {
+      display: flex;
+      align-items: center;
+      margin-left: 5px; }
+      nav .nav-principal .user-carrinho .user img {
+        margin-right: 10px;
+        width: 50px;
+        border-radius: 15px; }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-}
+/*# sourceMappingURL=main.css.map */
