--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,16 +11,17 @@ body {
 nav .coisas-da-loja {
   background-color: black;
   width: 100%; }
-  nav .coisas-da-loja ul {
-    display: flex;
-    list-style: none;
-    height: 5vh;
-    align-items: center;
-    justify-content: space-evenly; }
-    nav .coisas-da-loja ul a {
-      color: white;
-      font-weight: 800;
-      text-decoration: none; }
+nav ul {
+  display: flex;
+  list-style: none;
+  height: 5vh;
+  align-items: center;
+  justify-content: space-evenly; }
+  nav ul a {
+    color: white;
+    font-weight: 800;
+    font-size: 1.1em;
+    text-decoration: none; }
 nav .nav-principal {
   display: flex;
   justify-content: space-around;
@@ -58,5 +59,42 @@ nav .nav-principal {
         margin-right: 10px;
         width: 50px;
         border-radius: 15px; }
+nav .navegacao {
+  background-color: red;
+  height: 7vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center; }
+  nav .navegacao ul li {
+    margin: 0 30px; }
+
+.dropdown {
+  position: relative;
+  display: inline-block; }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1; }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block; }
+  .dropdown-content a:hover {
+    background-color: white; }
+  .dropdown:hover .dropdown-content {
+    display: block; }
+  .dropdown .dropbtn {
+    background-color: #00000000;
+    color: white;
+    border: none;
+    color: white;
+    font-weight: 800;
+    font-size: 1.1em;
+    text-decoration: none;
+    cursor: pointer; }
 
 /*# sourceMappingURL=main.css.map */
