--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,178 +2,224 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+}
 
 body {
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+}
 
 nav .coisas-da-loja {
   background-color: black;
-  width: 100%; }
+  width: 100%;
+}
 nav ul {
   display: flex;
   list-style: none;
   height: 5vh;
   align-items: center;
-  justify-content: space-evenly; }
-  nav ul a {
-    color: white;
-    font-weight: 800;
-    font-size: 1.1em;
-    text-decoration: none; }
+  justify-content: space-evenly;
+}
+nav ul a {
+  color: white;
+  font-weight: 800;
+  font-size: 1.1em;
+  text-decoration: none;
+}
 nav .nav-principal {
-  height: 11vh; }
-  nav .nav-principal .nav-principal-div {
-    display: flex;
-    align-items: center;
-    justify-content: space-around; }
-  nav .nav-principal .logo {
-    color: red;
-    font-size: 2em; }
-    nav .nav-principal .logo h1 {
-      font-weight: 900; }
-  nav .nav-principal .pesquisa {
-    display: flex; }
-    nav .nav-principal .pesquisa input {
-      width: 420px;
-      border-top-left-radius: 15px;
-      border-bottom-left-radius: 15px;
-      border-color: black; }
-    nav .nav-principal .pesquisa .lupa {
-      background-color: red;
-      width: 45px;
-      height: 45px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-top-right-radius: 15px;
-      border-bottom-right-radius: 15px; }
-  nav .nav-principal .user-carrinho {
-    display: flex; }
-    nav .nav-principal .user-carrinho .user {
-      display: flex;
-      align-items: center;
-      margin-left: 5px; }
-      nav .nav-principal .user-carrinho .user img {
-        margin-right: 10px;
-        width: 50px;
-        border-radius: 15px; }
+  height: 11vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+nav .nav-principal .logo {
+  color: red;
+  font-size: 2em;
+}
+nav .nav-principal .logo h1 {
+  font-weight: 900;
+}
+nav .nav-principal .pesquisa {
+  display: flex;
+}
+nav .nav-principal .pesquisa input {
+  width: 420px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-color: black;
+}
+nav .nav-principal .pesquisa .lupa {
+  background-color: red;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+nav .nav-principal .user-carrinho {
+  display: flex;
+}
+nav .nav-principal .user-carrinho .user {
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
+}
+nav .nav-principal .user-carrinho .user img {
+  margin-right: 10px;
+  width: 50px;
+  border-radius: 15px;
+}
 nav .navegacao {
   background-color: red;
   height: 7vh;
   display: flex;
   justify-content: space-around;
-  align-items: center; }
-  nav .navegacao ul li {
-    margin: 0 30px; }
-    nav .navegacao ul li a:hover {
-      background-color: #e40101;
-      padding: 1vh; }
+  align-items: center;
+}
+nav .navegacao ul li {
+  margin: 0 30px;
+}
+nav .navegacao ul li a:hover {
+  background-color: #e40101;
+  padding: 1vh;
+}
 
 .dropdown-responsivo {
   display: none;
-  position: relative; }
-  .dropdown-responsivo-content {
-    display: none;
-    position: absolute;
-    padding: 20px;
-    margin-top: 33px;
-    background-color: #f9f9f9;
-    width: 392px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1; }
-  .dropdown-responsivo-content a {
-    color: black;
-    padding: 12px 1px;
-    text-decoration: none;
-    display: block; }
-  .dropdown-responsivo-esquerda, .dropdown-responsivo-meio, .dropdown-responsivo-direita {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; }
-  .dropdown-responsivo-meio {
-    padding: 0 33px; }
-  .dropdown-responsivo-content a:hover {
-    background-color: white; }
-  .dropdown-responsivo:hover .dropdown-responsivo-content {
-    display: flex; }
-  .dropdown-responsivo .dropbtn {
-    background-color: #bb000000;
-    color: white;
-    border: none;
-    color: white;
-    font-weight: 800;
-    font-size: 1.1em;
-    text-decoration: none;
-    cursor: pointer; }
+  position: relative;
+}
+.dropdown-responsivo-content {
+  display: none;
+  position: absolute;
+  padding: 20px;
+  margin-top: 33px;
+  background-color: #f9f9f9;
+  width: 392px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-responsivo-content a {
+  color: black;
+  padding: 12px 1px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-responsivo-esquerda, .dropdown-responsivo-meio, .dropdown-responsivo-direita {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.dropdown-responsivo-meio {
+  padding: 0 33px;
+}
+.dropdown-responsivo-content a:hover {
+  background-color: white;
+}
+.dropdown-responsivo:hover .dropdown-responsivo-content {
+  display: flex;
+}
+.dropdown-responsivo .dropbtn {
+  background-color: rgba(187, 0, 0, 0);
+  color: white;
+  border: none;
+  color: white;
+  font-weight: 800;
+  font-size: 1.1em;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 .dropdown {
   position: relative;
-  display: inline-block; }
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1; }
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block; }
-  .dropdown-content a:hover {
-    background-color: white; }
-  .dropdown:hover .dropdown-content {
-    display: block; }
-  .dropdown .dropbtn {
-    background-color: #bb000000;
-    color: white;
-    border: none;
-    color: white;
-    font-weight: 800;
-    font-size: 1.1em;
-    text-decoration: none;
-    cursor: pointer; }
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  margin-top: 20px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: white;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown .dropbtn {
+  background-color: rgba(187, 0, 0, 0);
+  color: white;
+  border: none;
+  color: white;
+  font-weight: 800;
+  font-size: 1.1em;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 @media (max-width: 1024px) {
   nav .nav-principal .user-carrinho .user h3 {
-    display: none; } }
+    display: none;
+  }
+}
 @media (max-width: 768px) {
   nav {
-    border-top: 10px solid black; }
-    nav ul {
-      display: none; }
-    nav .nav-principal {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 0 30px; }
-      nav .nav-principal .user-carrinho .user h3 {
-        display: block; }
-      nav .nav-principal .nav-principal-div {
-        width: 100%;
-        justify-content: space-between; }
-      nav .nav-principal .pesquisa {
-        display: none; }
-
+    border-top: 10px solid black;
+  }
+  nav ul {
+    display: none;
+  }
+  nav .nav-principal {
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+  }
+  nav .nav-principal .user-carrinho .user h3 {
+    display: block;
+  }
+  nav .nav-principal .nav-principal-div {
+    width: 100%;
+    justify-content: space-between;
+  }
+  nav .nav-principal .pesquisa {
+    display: none;
+  }
   .navegacao .dropdown {
-    display: none; }
+    display: none;
+  }
   .navegacao .dropdown-responsivo {
     display: inline-flex;
-    justify-content: center; }
+    justify-content: center;
+  }
   .navegacao .dropdown-content {
     position: absolute;
     display: flex;
-    flex-direction: column; } }
+    flex-direction: column;
+  }
+}
 @media (max-width: 425px) {
   nav .navegacao .dropdown-responsivo-meio, nav .navegacao .dropdown-responsivo-direita {
     padding: 0 0;
-    margin-top: 20px; }
+  }
+  nav .navegacao .dropdown-responsivo-meio, nav .navegacao .dropdown-responsivo-direita, nav .navegacao .dropdown-responsivo-esquerda {
+    padding: 20px;
+  }
   nav .navegacao .dropdown-responsivo-content {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; } }
+    align-items: flex-start;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
