--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -36,10 +36,9 @@ nav
             text-decoration: none
     .nav-principal
         height: 11vh
-        .nav-principal-div
-            display: flex
-            align-items: center
-            justify-content: space-around
+        display: flex
+        justify-content: space-around
+        align-items: center
         .logo
             color: $primary-color
             font-size: 2em
@@ -134,6 +133,7 @@ nav
         display: none
         position: absolute
         background-color: $third-color
+        margin-top: 20px
         min-width: 160px
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
         z-index: 1
@@ -147,8 +147,9 @@ nav
     &-content a:hover
         background-color: $third-color
 
-    &:hover &-content
-        display: block
+    &:hover 
+        .dropdown-content
+            display: block
 
     .dropbtn
         background-color: $transparente
@@ -176,7 +177,6 @@ nav
 
         .nav-principal
             display: flex
-            flex-direction: column
             align-items: center
             padding: 0 30px
             .user-carrinho
@@ -205,8 +205,8 @@ nav
             .dropdown-responsivo
                 &-meio, &-direita
                     padding: 0 0
-                    margin-top: 20px
-                
+                &-meio, &-direita, &-esquerda
+                    padding: 20px
                 &-content
                     display: flex
                     flex-direction: column
