--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -147,7 +147,7 @@ nav
     &-content a:hover
         background-color: $third-color
 
-    &:hover 
+    &:focus-within             
         .dropdown-content
             display: block
 
