--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +15,7 @@ nav .coisas-da-loja {
   background-color: black;
   width: 100%;
 }
+
 nav ul {
   display: flex;
   list-style: none;
@@ -21,34 +23,41 @@ nav ul {
   align-items: center;
   justify-content: space-evenly;
 }
+
 nav ul a {
   color: white;
   font-weight: 800;
   font-size: 1.1em;
   text-decoration: none;
 }
+
 nav .nav-principal {
   height: 11vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
+
 nav .nav-principal .logo {
   color: red;
   font-size: 2em;
 }
+
 nav .nav-principal .logo h1 {
   font-weight: 900;
 }
+
 nav .nav-principal .pesquisa {
   display: flex;
 }
+
 nav .nav-principal .pesquisa input {
   width: 420px;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
   border-color: black;
 }
+
 nav .nav-principal .pesquisa .lupa {
   background-color: red;
   width: 45px;
@@ -59,19 +68,23 @@ nav .nav-principal .pesquisa .lupa {
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
 }
+
 nav .nav-principal .user-carrinho {
   display: flex;
 }
+
 nav .nav-principal .user-carrinho .user {
   display: flex;
   align-items: center;
   margin-left: 5px;
 }
+
 nav .nav-principal .user-carrinho .user img {
   margin-right: 10px;
   width: 50px;
   border-radius: 15px;
 }
+
 nav .navegacao {
   background-color: red;
   height: 7vh;
@@ -79,9 +92,11 @@ nav .navegacao {
   justify-content: space-around;
   align-items: center;
 }
+
 nav .navegacao ul li {
   margin: 0 30px;
 }
+
 nav .navegacao ul li a:hover {
   background-color: #e40101;
   padding: 1vh;
@@ -91,38 +106,45 @@ nav .navegacao ul li a:hover {
   display: none;
   position: relative;
 }
+
 .dropdown-responsivo-content {
   display: none;
   position: absolute;
-  padding: 20px;
+  padding: 10px;
   margin-top: 33px;
   background-color: #f9f9f9;
   width: 392px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+
 .dropdown-responsivo-content a {
   color: black;
   padding: 12px 1px;
   text-decoration: none;
   display: block;
 }
+
 .dropdown-responsivo-esquerda, .dropdown-responsivo-meio, .dropdown-responsivo-direita {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
+
 .dropdown-responsivo-meio {
   padding: 0 33px;
 }
+
 .dropdown-responsivo-content a:hover {
   background-color: white;
 }
+
 .dropdown-responsivo:hover .dropdown-responsivo-content {
   display: flex;
 }
+
 .dropdown-responsivo .dropbtn {
-  background-color: rgba(187, 0, 0, 0);
+  background-color: #bb000000;
   color: white;
   border: none;
   color: white;
@@ -136,6 +158,7 @@ nav .navegacao ul li a:hover {
   position: relative;
   display: inline-block;
 }
+
 .dropdown-content {
   display: none;
   position: absolute;
@@ -145,20 +168,24 @@ nav .navegacao ul li a:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
+
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
+
 .dropdown-content a:hover {
   background-color: white;
 }
-.dropdown:focus-within .dropdown-content {
+
+.dropdown:hover .dropdown-content {
   display: block;
 }
+
 .dropdown .dropbtn {
-  background-color: rgba(187, 0, 0, 0);
+  background-color: #bb000000;
   color: white;
   border: none;
   color: white;
@@ -173,53 +200,415 @@ nav .navegacao ul li a:hover {
     display: none;
   }
 }
+
 @media (max-width: 768px) {
   nav {
     border-top: 10px solid black;
   }
+
   nav ul {
     display: none;
   }
+
   nav .nav-principal {
     display: flex;
     align-items: center;
     padding: 0 30px;
   }
-  nav .nav-principal .user-carrinho .user h3 {
-    display: block;
+  nav .nav-principal .pesquisa {
+    width: 50%;  
   }
+  nav .nav-principal .pesquisa  input{
+    width: 100%;  
+  }
+
   nav .nav-principal .nav-principal-div {
     width: 100%;
     justify-content: space-between;
   }
-  nav .nav-principal .pesquisa {
-    display: none;
-  }
+
+
+
   .navegacao .dropdown {
     display: none;
   }
+
   .navegacao .dropdown-responsivo {
     display: inline-flex;
     justify-content: center;
   }
+
   .navegacao .dropdown-content {
     position: absolute;
     display: flex;
     flex-direction: column;
   }
 }
+
 @media (max-width: 425px) {
-  nav .navegacao .dropdown-responsivo-meio, nav .navegacao .dropdown-responsivo-direita {
-    padding: 0 0;
+  nav .navegacao .dropdown-responsivo {
+    display: none;
   }
-  nav .navegacao .dropdown-responsivo-meio, nav .navegacao .dropdown-responsivo-direita, nav .navegacao .dropdown-responsivo-esquerda {
-    padding: 20px;
+  nav .nav-principal .pesquisa {
+    display: none;  
   }
-  nav .navegacao .dropdown-responsivo-content {
+  
+}
+ */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+
+body {
+  height: 100vh;
+}
+
+/*nav*/
+nav .coisas-da-loja {
+  background-color: black;
+  width: 100%;
+}
+
+nav .coisas-da-loja ul {
+  display: flex;
+  list-style: none;
+  height: 5vh;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+nav .coisas-da-loja ul a {
+  color: white;
+  font-weight: 800;
+  font-size: 1.1em;
+  text-decoration: none;
+}
+
+nav .navegacao ul li a {
+  font-weight: 700;
+  font-size: 1.1em;
+}
+
+nav {
+  display: flex;
+  height: 80px;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav .navegacao {
+  background-color: #ff0000;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  height: 7vh;
+}
+
+nav .nav-principal {
+  height: 11vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+nav .nav-principal .logo {
+  color: red;
+  font-size: 2em;
+}
+
+nav .nav-principal .logo h1 {
+  font-weight: 900;
+}
+
+nav .nav-principal .pesquisa {
+  display: flex;
+  width: 47%;
+}
+
+nav .nav-principal .pesquisa input {
+  width: 100%;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-color: black;
+}
+
+nav .nav-principal .pesquisa .lupa {
+  background-color: red;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+nav .nav-principal .user-carrinho {
+  display: flex;
+}
+
+nav .nav-principal .user-carrinho .user {
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
+}
+
+nav .nav-principal .user-carrinho .user img {
+  margin-right: 10px;
+  width: 50px;
+  border-radius: 15px;
+}
+
+
+nav .logo {
+  color: #ff0000;
+  font-weight: bold;
+  line-height: 17px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+nav ul li {
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: #f2f2f2;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 15px;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
+}
+
+nav ul li a.active,
+nav ul li a:hover {}
+
+
+nav .menu-btn i {
+  color: #000000;
+  font-size: 22px;
+  cursor: pointer;
+  display: none;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: -1;
+  width: 100%;
+  padding: 0 30px;
+}
+
+.content div {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+#logo-responsiva {
+  display: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  margin-top: 20px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: white;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown .dropbtn {
+  background-color: #bb000000;
+  color: white;
+  border: none;
+  color: white;
+  font-weight: 700;
+  font-size: 1.1em;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.dropdown-responsivo {
+  display: none;
+  position: relative;
+}
+
+.dropdown-responsivo-content {
+  display: none;
+  position: absolute;
+  padding: 10px;
+  margin-top: 33px;
+  background-color: #f9f9f9;
+  width: 411px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-responsivo-content a {
+  color: black;
+  padding: 12px 1px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-responsivo-esquerda, .dropdown-responsivo-meio, .dropdown-responsivo-direita {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.dropdown-responsivo-meio {
+  padding: 0 33px;
+}
+
+.dropdown-responsivo-content a:hover {
+  background-color: white;
+}
+
+.dropdown-responsivo:hover .dropdown-responsivo-content {
+  display: flex;
+}
+
+.dropdown-responsivo .dropbtn {
+  background-color: #bb000000;
+  color: white;
+  border: none;
+  color: white;
+  font-weight: 800;
+  font-size: 1.1em;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+@media (max-width: 760px) {
+  nav .nav-principal .user-carrinho .user h3 {
+    display: none;
+  }
+
+  nav .coisas-da-loja ul a {
+    display: none;
+  }
+
+  nav .coisas-da-loja ul {
+    height: 2vh;
+  }
+  nav .navegacao ul {
+    display: none;
+  }
+
+  .navegacao .dropdown {
+    display: none;
+  }
+
+  .navegacao .dropdown-responsivo {
+    display: inline-flex;
+    justify-content: center;
+  }
+
+  .navegacao .dropdown-content {
+    position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
   }
 }
 
-/*# sourceMappingURL=main.css.map */
+@media (max-width: 425px) {
+  nav .menu-btn i {
+    display: block;
+  }
+
+
+  nav {
+    justify-content: space-around;
+    padding: 0;
+  }
+  
+  #click:checked~.menu-btn i:before {
+    content: "\f00d";
+  }
+
+  nav ul {
+    z-index: 5;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    background: rgb(15, 15, 15);
+    width: 100%;
+    border-radius: 0 0 20px 20px;
+    text-align: center;
+    display: block;
+    transition: all 0.3s ease;
+  }
+
+  #click:checked~ul {
+    left: 0;
+  }
+
+  nav ul li {
+    width: 100%;
+    margin: 40px 0;
+  }
+
+  nav ul li a {
+    width: 100%;
+    margin-left: -100%;
+    display: block;
+    font-size: 20px;
+    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+
+  #click:checked~ul li a {
+    margin-left: 0px;
+  }
+
+  nav ul li a.active,
+  nav ul li a:hover {
+    background: none;
+    color: cyan;
+  }
+}
