--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,19 +12,98 @@ body {
 }
 
 .logo {
-  color: #ff0000;
+  color: #f10000;
   font-weight: bold;
+  text-decoration: none;
   font-size: 2em;
   line-height: 17px;
 }
 
+.logo:hover {
+  color: #000000;
+  transition: 1s all;
+}
+
+/*! main*/
+main {
+  align-items: center;
+  padding: 0 100px;
+  border-left: 2px;
+  border-right: 2px;
+  border: #a1a1a1;
+  width: 80%;
+  margin: 0 auto;
+}
+
+main .alerta {
+  background-color: #f10000;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+  border-radius: 17px;
+  justify-content: space-between;
+}
+
+main .alerta p {
+  color: #fff;
+  font-weight: 800;
+}
+
+main .produtos .categoria {
+  display: flex;
+  align-items: center;
+}
+
+main .produtos {
+  margin-top: 10px;
+}
+
+main .divulgacao {
+  margin-top: 10px;
+}
+
+main .divulgacao img {
+  width: 100%;
+}
+
+main .produtos div .card-produto {
+  min-width: 168px;
+  height: 34vh;
+  display: flex;
+  margin: 5px 6px;
+  border-radius: 17px;
+  padding: 10px;
+  background-color: #80808012;
+  flex-direction: column;
+  justify-content: space-around;
+
+}
+
+main .produtos div .card-produto .preco-antigo {
+  font-size: 0.9em;
+  color: #a7a7a7;
+  text-decoration-line: line-through;
+  text-decoration-color: #f10000;
+}
+
+main .produtos div .card-produto .nome-produto {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+main .produtos div .card-produto img {
+  border-radius: 17px;
+  width: 100%;
+}
 
 /*! início nav */
 
 
 nav {
   display: flex;
-  height: 80px;
   width: 100%;
   align-items: center;
   flex-wrap: wrap;
@@ -43,7 +122,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #f2f2f2;
+  color: #ffffff;
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
@@ -90,12 +169,14 @@ nav .nav-principal .pesquisa {
 nav .nav-principal .pesquisa input {
   width: 100%;
   border-top-left-radius: 15px;
+  padding-left: 10px;
+  font-size: 1em;
   border-bottom-left-radius: 15px;
   border-color: black;
 }
 
 nav .nav-principal .pesquisa .lupa {
-  background-color: red;
+  background-color: #f10000;
   width: 45px;
   height: 45px;
   display: flex;
@@ -134,7 +215,7 @@ nav .nav-principal .user-carrinho .menu-btn i {
 }
 
 nav .navegacao {
-  background-color: #ff0000;
+  background-color: #f10000;
   width: 100%;
   justify-content: space-around;
   align-items: center;
@@ -170,7 +251,7 @@ nav .navegacao ul li a {
 }
 
 .dropdown-content a:hover {
-  background-color: rgb(255, 222, 222);
+  background-color: #80808012;
 }
 
 .dropdown:hover .dropdown-content {
@@ -213,11 +294,6 @@ input[type="checkbox"] {
   font-size: 40px;
   font-weight: 700;
 }
-
-#logo-responsiva {
-  display: none;
-}
-
 
 
 .cesta-responsiva-md {
@@ -404,7 +480,7 @@ input[type="checkbox"] {
   }
 
   nav .nav-principal .user-carrinho ul li h4 {
-    color: red;
+    color: #f10000;
     font-size: 1.5em;
   }
 
@@ -415,7 +491,7 @@ input[type="checkbox"] {
   nav .nav-principal .user-carrinho ul li a.active,
   nav .nav-principal .user-carrinho ul li a:hover {
     background: none;
-    color: red;
+    color: #f10000;
   }
 
   /*! final nav*/
