--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,12 +10,15 @@
 body {
   height: 100vh;
 }
+
 .logo img {
   width: 81%;
 }
+
 section {
   margin: 30px 0;
 }
+
 .logo {
   color: var(--cor-primaria);
   font-weight: bold;
@@ -40,25 +43,41 @@ main {
   margin: 0 auto;
 }
 
+main .container {
+  background-color: var(--cor-primaria);
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  margin: 30px 0;
+  align-items: center;
+  justify-content: space-between;
+}
+
 main .produtos .produtos-alta {
   display: flex;
   align-items: center;
 }
+
 main .produtos .produtos-alta #card-maior {
   width: 42%;
   height: auto;
 }
+
 main .produtos .produtos-alta .lista-produtos {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
 main .produtos .produtos-alta .lista-produtos .card-produto {
   width: 150px;
 }
-main .alerta p {
+
+main .container p, main .container h3 {
   color: #fff;
   font-weight: 800;
+  text-transform: uppercase;
+
 }
 
 main .produtos .categoria {
@@ -69,15 +88,18 @@ main .produtos .categoria {
 main .divulgacao img {
   width: 100%;
 }
+
 main .produtos .promocao {
   display: flex;
   align-items: center;
   border: 5px solid var(--cor-primaria);
 }
+
 main .produtos .promocao img {
   width: 50%;
 }
-main .produtos .promocao .produtos-promocao{
+
+main .produtos .promocao .produtos-promocao {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
